add logout modules
